Switched to folder icon for the tree/flat mode toggler in content selector. Fixed progress bar not being visible in the Install app dialog.

--- a/src/main/resources/assets/admin/common/icons/icons.less
+++ b/src/main/resources/assets/admin/common/icons/icons.less
@@ -481,6 +481,14 @@
   }
 }
 
+.icon-tree.mode-toggler-button {
+  .icon-folder-closed;
+
+  &.active {
+    .icon-folder-open;
+  }
+}
+
 .icon-user-tie {
   .icon;
   &:before {
