--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -78,6 +78,7 @@
   .dialog-content {
     width: 100%;
     .clearfix();
+    padding: 1px 0;
 
     > p {
       margin-bottom: 20px;
@@ -315,7 +316,7 @@ body {
     width: 80.185%;
   }
 
-  @media screen and (max-height: 950px) {
+  @media screen and (max-height: 760px) {
     .@{_COMMON_PREFIX}modal-dialog {
       .cancel-button-inline();
 
