--- a/src/main/resources/assets/admin/common/styles/api/ui/selector/dropdown/dropdown.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/selector/dropdown/dropdown.less
@@ -97,12 +97,9 @@
 .dropdown-tree-grid {
   .grid {
     .slick-row {
-/*
       .slick-cell {
         height: 50px;
-        padding: 6px 8px 6px 15px;
       }
-*/
       &.readonly {
         opacity: 0.5;
         pointer-events: none;
