--- a/src/main/resources/assets/admin/common/styles/apps/module/install-application-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/module/install-application-dialog.less
@@ -151,6 +151,9 @@
           }
           color: @input-dark-red;
         }
+        .installing .progress-bar {
+          display: block;
+        }
         .installed {
           opacity: 0.6;
           font-size: 14px;
@@ -195,7 +198,7 @@
       right: 56px;
     }
 
-    @media screen and (max-height: 950px) {
+    @media screen and (max-height: 760px) {
       top: 39px;
       right: 78px;
     }
